<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"   
     >
     
    <TextView 
		android:id="@+id/about_content1"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"	
		android:text="@string/about_text1"
		android:textSize="15sp"
		/>
    
    <TextView 
		android:id="@+id/about_content2"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_text2"
		android:textSize="15sp"
		/>
    
    <TextView 
		android:id="@+id/about_content3"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_text3"
		android:textSize="15sp"
		/>
    
    <TextView 
		android:id="@+id/about_content4"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_text4"
		android:textSize="15sp"
		/> 
		
	<TextView 
		android:id="@+id/about_content5"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_text5"
		android:textSize="15sp"
		/> 
		
	<TextView 
		android:id="@+id/about_content6"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_text6"
		android:textSize="15sp"
		/> 
		
	<Button android:id="@+id/about_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_return"
    	/> 
		    
</LinearLayout>